--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <div id="root">
-    <script
+    <!-- <script
       src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.5/libs/oversea/index.js"></script>
     <script>
       const API_BASE_URL = "https://api.coze.com/v1";
@@ -224,7 +224,7 @@
           conversation_id: generateUUID(),
         },
       });
-    </script>
+    </script> -->
   </div>
 </body>
 
